--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=4.4.6"
   },
   "scripts": {
-    "test": "nightwatch --env local",
+    "test": "nightwatch --env local ./test/e2e/github.js",
     "ie": "nightwatch -e ie11",
     "sauce": "nightwatch -e chrome,ie11,android_s4_emulator,iphone_6_simulator",
     "upload": "node test/e2e/upload_screenshots_to_s3.js",
